# rag_homework

./: .gitignore
rag_week02/: .env.example  LICENSE  PROJECT_SUMMARY.md  README.md  install.bat  install.sh  pyproject.toml  rag_week02.ipynb  requirements.txt  run_tests.py  test_basic.py
rag_week02/docs/: API.md  DEPLOYMENT.md  USER_GUIDE.md
rag_week02/examples/: cli.py  demo.py
rag_week02/src/rag_system/: __init__.py
rag_week02/src/rag_system/core/: __init__.py  config.py  logger.py  rag_system.py
rag_week02/src/rag_system/database/: __init__.py  chroma_manager.py
rag_week02/src/rag_system/embeddings/: __init__.py  custom_embedding.py
rag_week02/src/rag_system/llm/: __init__.py  custom_llm.py
rag_week02/src/rag_system/reranker/: __init__.py  custom_reranker.py
rag_week02/tests/: conftest.py
rag_week02/tests/integration/: test_integration.py
rag_week02/tests/unit/: test_config.py  test_database.py  test_embedding.py  test_llm.py  test_rag_system.py  test_reranker.py
rag_week03/: rag_week03.ipynb
rag_week03/data/data/: output_chunks.json  sample.csv  sample.txt
